ajustes del formulario para su revisión

--- a/public/contacto.html
+++ b/public/contacto.html
@@ -1,14 +1,14 @@
 <template id="contacto-template">
     <section class="contact-section">
         <div class="contact-content">
-            <h1>Contacto</h1>
-            <p>Estamos aquí para ayudarte. Ponte en contacto con nosotros a través de los siguientes medios:</p>
-            <ul>
+            <h1>Contactanos</h1>
+<!--            <p>Estamos aquí para ayudarte. Ponte en contacto con nosotros a través de los siguientes medios:</p>
+             <ul>
                 <li>Email: asdrubalgg@gmail.com</li>
                 <li>Teléfono: +123-456-7890</li>
                 <li>Dirección: Calle Falsa 123, Ciudad, País</li>
-            </ul>
-            <p>O completa el siguiente formulario y nos pondremos en contacto contigo:</p>
+            </ul> -->
+
             <form id="contact-form">
                 <label for="name">Nombre:</label>
                 <input type="text" id="name" name="name" required>
